--- a/pages/account/register.html
+++ b/pages/account/register.html
@@ -14,107 +14,190 @@
 </head>
 
 <body>
-    <section>
-        <header>
-            <!-- Banner Image -->
-            <img src="/assets/images/banners/banner_header.png" alt="Tháng Tri Ân Săn Sale" class="img-fluid w-100">
-            <!-- Top Info -->
-
-        </header>
-        <!-- Navigation -->
+<header>
+    <div class="fixed-top d-none d-lg-block">
+        <img src="/assets/images/banners/banner_header.png" alt="Tháng Tri Ân Săn Sale"
+             class="img-fluid w-100 banner-header">
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
             <div class="container">
                 <!-- Logo -->
                 <a class="navbar-brand" href="#">
                     <img src="/assets/images/logo.png" alt="Logo" style="height: 60px;width: auto">
                 </a>
-
-                <!-- Navbar toggler cho thiết bị nhỏ -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <!-- Toggle button -->
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <!-- Các liên kết và thanh tìm kiếm -->
+                <!-- Navbar content -->
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <!-- Links ở giữa -->
-                    <div class="navbar-nav mx-auto fw-bold">
-                        <a class="nav-link" href="#home">TRANG CHỦ</a>
-                        <a class="nav-link" href="pages/about.html">GIỚI THIỆU</a>
-
-                        <!-- Dropdown cho SẢN PHẨM -->
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                SẢN PHẨM
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="dropdown-submenu">
-                                    <a class="dropdown-item dropdown-toggle" href="#">Trống</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Trống điện tử</a></li>
-                                        <li><a class="dropdown-item" href="#">Trống cơ</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown-submenu">
-                                    <a class="dropdown-item dropdown-toggle" href="#">Phụ kiện</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Giá đỡ trống</a></li>
-                                        <li><a class="dropdown-item" href="#">Gậy trống</a></li>
-                                        <li><a class="dropdown-item" href="#">Túi đựng trống</a></li>
-                                    </ul>
-                                </li>
-                                <li><a class="dropdown-item" href="#">Âm thanh</a></li>
-                                <li><a class="dropdown-item" href="#">Dụng cụ tập luyện</a></li>
-                            </ul>
-                        </div>
-
-                        <a class="nav-link" href="#">TIN TỨC</a>
-                        <a class="nav-link" href="#">LIÊN HỆ</a>
-                        <a class="nav-link" href="#">CHI NHÁNH</a>
-                    </div>
-
-                    <!-- Thanh tìm kiếm trên thiết bị lớn -->
-                    <form class="d-flex mt-3 mt-lg-0 me-3">
-                        <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search">
+                    <!-- Search form -->
+                    <form class="search-form d-lg-none">
+                        <input class="form-control" type="search" placeholder="Tìm kiếm" aria-label="Search">
                         <button class="btn btn-dark" type="submit">Tìm</button>
                     </form>
+                    <!-- Navigation links -->
+                    <div class="navbar-nav mx-auto fw-bold">
+                        <a class="nav-link" href="/pages/home.html">TRANG CHỦ</a>
+                        <a class="nav-link" href="/pages/about.html">GIỚI THIỆU</a>
+                        <a class="nav-link" href="/pages/about.html">SẢN PHẨM</a>
+                        <a class="nav-link" href="/pages/posts/posts.html">TIN TỨC</a>
+                        <a class="nav-link" href="/pages/contact.html">LIÊN HỆ</a>
+                    </div>
+                    <!-- Action buttons for mobile -->
+                    <div class="action-buttons d-lg-none">
+                        <div class="account-button-container">
+                            <a href="#" class="btn btn-light position-relative">
+                                <i class="bi bi-cart-fill"></i>
+                                <span
+                                        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                        3
+                                    </span>
+                            </a>
+                        </div>
 
-                    <!-- Icon Đăng nhập và Giỏ hàng -->
-                    <div class="d-flex align-items-center ms-auto order-lg-2">
-                        <!-- ms-auto để đưa sang phải trên màn hình lớn -->
-                        <!-- Giỏ hàng -->
-                        <a href="#" class="btn btn-light me-3 position-relative">
-                            <i class="bi bi-cart-fill"></i>
-                            <!-- Badge hiển thị số lượng sản phẩm trong giỏ hàng -->
-                            <span
-                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                3 <!-- số lượng sản phẩm -->
-                            </span>
-                        </a>
-
-                        <!-- Đăng nhập -->
-                        <div class="dropdown">
-                            <button class="btn btn-light dropdown-toggle" type="button" id="accountDropdown"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                        <div class="account-button-container dropdown">
+                            <button class="btn btn-light w-100" type="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
                                 <i class="bi bi-person-circle"></i>
                             </button>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
-                                <li><a class="dropdown-item" href="#">Đăng nhập</a></li>
-                                <li><a class="dropdown-item" href="#">Đăng ký</a></li>
+                            <ul class="dropdown-menu mobile-dropdown-menu">
+                                <li><a class="dropdown-item" href="/pages/account/login.html">Đăng nhập</a></li>
+                                <li><a class="dropdown-item" href="/pages/account/register.html">Đăng ký</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Tài khoản của tôi</a></li>
-                                <li><a class="dropdown-item" href="#">Đơn hàng</a></li>
-                                <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
+                                <li><a class="dropdown-item" href="/pages/account/my-account.html">Tài khoản của
+                                    tôi</a></li>
+                                <li><a class="dropdown-item" href="/pages/account/orders.html">Đơn hàng</a></li>
+                                <li><a class="dropdown-item" href="/pages/account/logout.html">Đăng xuất</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- Desktop search form -->
+                    <form class="d-none d-lg-flex mt-lg-0 me-3">
+                        <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search">
+                        <button class="btn btn-dark" type="submit">Tìm</button>
+                    </form>
+                    <!-- Desktop action buttons -->
+                    <div class="d-none d-lg-flex align-items-center">
+                        <a href="#" class="btn btn-light me-3 position-relative">
+                            <i class="bi bi-cart-fill"></i>
+                            <span
+                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                    3
+                                </span>
+                        </a>
+                        <!-- Account dropdown for desktop -->
+                        <div class="dropdown">
+                            <button class="btn btn-light dropdown-toggle" type="button" id="desktopAccountDropdown"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-person-circle"></i>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="desktopAccountDropdown">
+                                <li><a class="dropdown-item" href="/pages/account/login.html">Đăng nhập</a></li>
+                                <li><a class="dropdown-item" href="/pages/account/register.html">Đăng ký</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="/pages/account/my-account.html">Tài khoản của
+                                    tôi</a>
+                                </li>
+                                <li><a class="dropdown-item" href="/pages/account/orders.html">Đơn hàng</a></li>
+                                <li><a class="dropdown-item" href="/pages/account/logout.html">Đăng xuất</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </nav>
-    </section>
+    </div>
+    <div class="mobile-header d-lg-none">
+        <div class="mobile-banner">
+            Giảm giá 20% cho đơn hàng đầu tiên 🎉
+        </div>
+        <div class="mobile-main-header">
+            <div class="d-flex justify-content-between align-items-center">
+                <button class="btn p-0" id="menuToggle">
+                    <i class="bi bi-list fs-4"></i>
+                </button>
+                <a href="/" class="logo">
+                    <img src="/assets/images/logo.png" alt="Logo" height="40">
+                </a>
+                <a href="/cart" class="position-relative">
+                    <i class="bi bi-cart fs-4"></i>
+                    <span class="cart-badge">3</span>
+                </a>
+            </div>
+            <div class="mobile-search">
+                <input type="text" placeholder="Tìm kiếm sản phẩm..."/>
+                <button><i class="bi bi-search"></i></button>
+            </div>
+        </div>
+    </div>
+
+    <div class="mobile-side-menu" id="sideMenu">
+        <div class="menu-header">
+            <div class="d-flex align-items-center">
+                <i class="bi bi-person-circle fs-1 me-3"></i>
+                <div>
+                    <h6 class="mb-1">Xin chào!</h6>
+                    <a href="/login" class="text-primary">Đăng nhập</a>
+                </div>
+            </div>
+        </div>
+        <div class="menu-items">
+            <a href="/" class="menu-item">
+                <i class="bi bi-house"></i>
+                Trang chủ
+            </a>
+            <a href="/categories" class="menu-item">
+                <i class="bi bi-grid"></i>
+                Danh mục sản phẩm
+            </a>
+            <a href="/orders" class="menu-item">
+                <i class="bi bi-bag"></i>
+                Đơn hàng của tôi
+            </a>
+            <a href="/wishlist" class="menu-item">
+                <i class="bi bi-heart"></i>
+                Sản phẩm yêu thích
+            </a>
+            <a href="/notifications" class="menu-item">
+                <i class="bi bi-bell"></i>
+                Thông báo
+            </a>
+            <a href="/account" class="menu-item">
+                <i class="bi bi-person"></i>
+                Tài khoản của tôi
+            </a>
+        </div>
+    </div>
+
+    <div class="menu-overlay" id="menuOverlay"></div>
+
+    <nav class="mobile-bottom-nav d-lg-none">
+        <div class="mobile-nav-items">
+            <a href="/" class="mobile-nav-item active">
+                <i class="bi bi-house"></i>
+                <span>Trang chủ</span>
+            </a>
+            <a href="/categories" class="mobile-nav-item">
+                <i class="bi bi-grid"></i>
+                <span>Danh mục</span>
+            </a>
+            <a href="/cart" class="mobile-nav-item">
+                <i class="bi bi-cart"></i>
+                <span>Giỏ hàng</span>
+            </a>
+            <a href="/account" class="mobile-nav-item">
+                <i class="bi bi-person"></i>
+                <span>Tài khoản</span>
+            </a>
+        </div>
+    </nav>
+</header>
 
     <div class="container my-5">
         <div class="row">
@@ -198,9 +281,9 @@
                                 <div class="col-12 col-md-8 mb-3">
                                     <label for="contact-email" class="form-label">Địa chỉ email</label>
                                     <input type="email" class="form-control" id="contact-email"
-                                        placeholder="Nhập email của bạn" required>
-                                    <button type="submit" class="btn btn-primary w-100 w-md-25 mt-2 text-black">Gửi
-                                        Email
+                                           placeholder="Nhập email của bạn"
+                                           required>
+                                    <button type="submit" class="btn btn-primary w-100 w-md-25 mt-2 text-black">Gửi Email
                                     </button>
                                 </div>
                             </div>
@@ -243,16 +326,13 @@
                     <div class="col-12 col-md-3 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Hỗ trợ khách hàng</h5>
                         <ul class="list-unstyled">
-                            <li><strong>Gọi mua hàng: </strong><a href="tel:123-456-7890"
-                                    class="text-white">123-456-7890
-                                    (Miễn
-                                    phí)</a></li>
-                            <li><strong>Khiếu nại, Bảo hành: </strong><a href="tel:123-456-7890"
-                                    class="text-white">123-456-7890</a>
+                            <li><strong>Gọi mua hàng: </strong><a href="tel:123-456-7890" class="text-white">123-456-7890
+                                (Miễn
+                                phí)</a></li>
+                            <li><strong>Khiếu nại, Bảo hành: </strong><a href="tel:123-456-7890" class="text-white">123-456-7890</a>
                             </li>
                             <li><strong>Thời gian phục vụ: </strong>8h-22h</li>
-                            <li><strong>Email: </strong><a href="mailto:drumstore@gmail.com"
-                                    class="text-white">drumstore@gmail.com</a>
+                            <li><strong>Email: </strong><a href="mailto:drumstore@gmail.com" class="text-white">drumstore@gmail.com</a>
                             </li>
                         </ul>
                     </div>
@@ -261,27 +341,23 @@
                     <div class="col-12 col-md-3">
                         <h5>MẠNG XÃ HỘI</h5>
                         <ul class="list-unstyled d-flex gap-3">
-                            <li><a href="#" class="text-white" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-                            </li>
+                            <li><a href="#" class="text-white" aria-label="Facebook"><i class="bi bi-facebook"></i></a></li>
                             <li><a href="#" class="text-white" aria-label="TikTok"><i class="bi bi-tiktok"></i></a></li>
-                            <li><a href="#" class="text-white" aria-label="Instagram"><i
-                                        class="bi bi-instagram"></i></a>
+                            <li><a href="#" class="text-white" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
                             </li>
-                            <li><a href="#" class="text-white" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
-                            </li>
+                            <li><a href="#" class="text-white" aria-label="YouTube"><i class="bi bi-youtube"></i></a></li>
                         </ul>
 
                         <h5 class="text-uppercase mt-4">Phương thức thanh toán</h5>
                         <ul class="list-unstyled">
-                            <li><img src="/assets/images/payments/visa.png" alt="Phương thức thanh toán"
-                                    class="img-fluid" />
+                            <li><img src="/assets/images/payments/visa.png" alt="Phương thức thanh toán" class="img-fluid"/>
                             </li>
                         </ul>
 
                         <h5 class="text-uppercase mt-4">Chứng nhận</h5>
                         <ul class="list-unstyled">
-                            <li><img src="/assets/images/dcma/chungnhan.png" alt="Chứng nhận" class="img-fluid" /></li>
-                            <li><img src="/assets/images/dcma/dmca.png" alt="Chứng nhận" class="img-fluid" /></li>
+                            <li><img src="/assets/images/dcma/chungnhan.png" alt="Chứng nhận" class="img-fluid"/></li>
+                            <li><img src="/assets/images/dcma/dmca.png" alt="Chứng nhận" class="img-fluid"/></li>
                         </ul>
                     </div>
                 </div>
