--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Page</title>
-
+    <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@400;600&display=swap"
+            rel="stylesheet">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
@@ -85,7 +87,7 @@
                             <span
                                     class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                                     3
-                                </span>
+                            </span>
                         </a>
                         <!-- Account dropdown for desktop -->
                         <div class="dropdown">
@@ -444,6 +446,84 @@
 </body>
 
 <script src="/assets/libraries/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+<script>
+    const adjustDesktopPadding = () => {
+        if (window.innerWidth >= 992) {  // chỉ áp dụng cho desktop
+            const header = document.querySelector('.fixed-top');
+            const main = document.querySelector('main');
+            if (header && main) {
+                const headerHeight = header.offsetHeight - 85;
+                main.style.paddingTop = headerHeight + 'px';
+            }
+        }
+    };
+
+    // Hàm điều chỉnh padding cho mobile
+    const adjustMobilePadding = () => {
+        if (window.innerWidth < 992) {  // chỉ áp dụng cho mobile
+            const mobileHeader = document.querySelector('.mobile-header');
+            const main = document.querySelector('main');
+            if (mobileHeader && main) {
+                const headerHeight = mobileHeader.offsetHeight;
+                document.documentElement.style.setProperty('--header-height', `${headerHeight}px`);
+                main.style.paddingTop = `${headerHeight}px`;
+            }
+        }
+    };
+
+    // Hàm chung để điều chỉnh padding dựa trên kích thước màn hình
+    const adjustLayoutPadding = () => {
+        const main = document.querySelector('main');
+        // Reset padding trước khi áp dụng
+        if (main) {
+            main.style.paddingTop = '0';
+        }
+
+        // Áp dụng padding tương ứng với layout
+        if (window.innerWidth >= 992) {
+            adjustDesktopPadding();
+        } else {
+            adjustMobilePadding();
+        }
+    };
+
+    // Xử lý menu mobile
+    const initMobileMenu = () => {
+        const menuToggle = document.getElementById('menuToggle');
+        const sideMenu = document.getElementById('sideMenu');
+        const menuOverlay = document.getElementById('menuOverlay');
+
+        if (menuToggle && sideMenu && menuOverlay) {
+            menuToggle.addEventListener('click', () => {
+                sideMenu.classList.add('active');
+                menuOverlay.classList.add('active');
+                document.body.style.overflow = 'hidden';
+            });
+
+            menuOverlay.addEventListener('click', () => {
+                sideMenu.classList.remove('active');
+                menuOverlay.classList.remove('active');
+                document.body.style.overflow = '';
+            });
+        }
+    };
+
+    // Event listeners
+    window.addEventListener('load', () => {
+        adjustLayoutPadding();
+        initMobileMenu();
+
+        // Xử lý khi ảnh header load xong
+        const headerImages = document.querySelectorAll('header img');
+        headerImages.forEach(img => {
+            img.addEventListener('load', adjustLayoutPadding);
+        });
+    });
+
+    window.addEventListener('resize', () => {
+        adjustLayoutPadding();
+    });
+</script>
 <script>
     const slides = [
         {src: "https://i.ebayimg.com/images/g/~t8AAOSwLf9gbius/s-l1600.webp", alt: "Slide 1", name: "Vic Firth American Classic Drum Stick 7A-DCP", price: "$50"},
