cart page fix media layout

--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -223,78 +223,90 @@
                 <h5 class="p-3">GIỎ HÀNG</h5>
                 <div class="product">
                     <div class="product-information">
-                        <img class="me-2" src="https://vietthuong.vn/image/catalog/pearl/trong-pearl-export-lacquer-725-standard-c248.jpg" alt="pearl">
                         <div class="product-detail">
-                            <p class="product-name">PEARL Export Lacquer EXL725SP Standard</p>
-                            <p class="product-price"><strong>Giá:</strong> 11.990.000 VND</p>
-                            <div class="product-option">
-                                <div class="option">
-                                    <strong>Màu</strong>
-                                    <div class="dropdown">
-                                        <button class="dropdown-toggle" id="dropdownMenuButton" type="button" data-bs-toggle="dropdown" aria-expanded="false">Đen</button>
-                                        <ul class="dropdown-menu p-3" aria-labelledby="dropdownMenuButton">
-                                            <li><a class="dropdown-item" href="#" data-color="Đen">Đen</a></li>
-                                            <li><a class="dropdown-item" href="#" data-color="Trắng">Trắng</a></li>
-                                            <li><a class="dropdown-item" href="#" data-color="Đỏ">Đỏ</a></li>
-                                            <li><a class="dropdown-item" href="#" data-color="Vàng">Vàng</a></li>
-                                        </ul>
+                            <img class="me-2" src="https://vietthuong.vn/image/catalog/pearl/trong-pearl-export-lacquer-725-standard-c248.jpg" alt="pearl">
+                            <div class="detail-content">
+                                <p class="product-name">PEARL Export Lacquer EXL725SP Standard</p>
+                                <p class="product-price"><strong>Giá:</strong> 11.990.000 VND</p>
+                                <div class="product-option">
+                                    <div class="option">
+                                        <strong>Màu</strong>
+                                        <div class="dropdown">
+                                            <button class="dropdown-toggle" id="dropdownMenuButton" type="button" data-bs-toggle="dropdown" aria-expanded="false">Đen</button>
+                                            <ul class="dropdown-menu p-3" aria-labelledby="dropdownMenuButton">
+                                                <li><a class="dropdown-item" href="#" data-color="Đen">Đen</a></li>
+                                                <li><a class="dropdown-item" href="#" data-color="Trắng">Trắng</a></li>
+                                                <li><a class="dropdown-item" href="#" data-color="Đỏ">Đỏ</a></li>
+                                                <li><a class="dropdown-item" href="#" data-color="Vàng">Vàng</a></li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="option">
-                                    <strong>Số lượng</strong>
-                                    <div class="quantity-container">
-                                        <div id="decreaseBtn" class="quantity-button">-</div>
-                                        <input type="text" id="quantityInput" class="quantity-input" value="1" readonly>
-                                        <div id="increaseBtn" class="quantity-button">+</div>
+                                    <div class="option">
+                                        <strong>Số lượng</strong>
+                                        <div class="quantity-container">
+                                            <div id="decreaseBtn" class="quantity-button">-</div>
+                                            <input type="text" id="quantityInput" class="quantity-input" value="1" readonly>
+                                            <div id="increaseBtn" class="quantity-button">+</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
                         <div class="product-detail2">
-                            <p class="product-price">11.990.000 VND</p>
-                            <p class="product-status">còn hàng</p>
-                            <button class="favorite-button"></button>
-                            <button class="delete-button"></button>
+                            <div class="detail-content">
+                                <p class="product-price">11.990.000 VND</p>
+                                <p class="product-status">còn hàng</p>
+                            </div>
+                            <div class="option">
+                                <button class="favorite-button"><img src="/assets/images/icon/Heart.svg" alt=""></button>
+                                <button class="delete-button"><img src="/assets/images/icon/Trash_bin.svg.svg" alt=""></button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="product-divider"></div>
                 <div class="product">
                     <div class="product-information">
-                        <img class="me-2" src="https://vietthuong.vn/image/cache/catalog/alesis-turbo-mesh-kit-400x400.jpg" alt="digital drum">
                         <div class="product-detail">
-                            <p class="product-name" id="product-name">Alesis Turbo Mesh Kit Alesis</p>
-                            <p class="product-price"><strong>Giá:</strong> 7.990.000 VND</p>
-                            <div class="product-option">
-                                <div class="option">
-                                    <strong>Màu</strong>
-                                    <div class="dropdown">
-                                        <button class="dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false">Đen</button>
-                                        <ul class="dropdown-menu p-3" aria-labelledby="dropdownMenuButton">
-                                            <li><a class="dropdown-item" href="#" data-color="Đen">Đen</a></li>
-                                            <li><a class="dropdown-item" href="#" data-color="Trắng">Trắng</a></li>
-                                            <li><a class="dropdown-item" href="#" data-color="Đỏ">Đỏ</a></li>
-                                            <li><a class="dropdown-item" href="#" data-color="Vàng">Vàng</a></li>
-                                        </ul>
+                            <img class="me-2" src="https://vietthuong.vn/image/cache/catalog/alesis-turbo-mesh-kit-400x400.jpg" alt="digital drum">
+                            <div class="detail-content">
+                                <p class="product-name" id="product-name">Alesis Turbo Mesh Kit Alesis</p>
+                                <p class="product-price"><strong>Giá:</strong> 7.990.000 VND</p>
+                                <div class="product-option">
+                                    <div class="option">
+                                        <strong>Màu</strong>
+                                        <div class="dropdown">
+                                            <button class="dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false">Đen</button>
+                                            <ul class="dropdown-menu p-3" aria-labelledby="dropdownMenuButton">
+                                                <li><a class="dropdown-item" href="#" data-color="Đen">Đen</a></li>
+                                                <li><a class="dropdown-item" href="#" data-color="Trắng">Trắng</a></li>
+                                                <li><a class="dropdown-item" href="#" data-color="Đỏ">Đỏ</a></li>
+                                                <li><a class="dropdown-item" href="#" data-color="Vàng">Vàng</a></li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="option">
-                                    <strong>Số lượng</strong>
-                                    <div class="quantity-container">
-                                        <div id="decreaseBtn1" class="quantity-button">-</div>
-                                        <input type="text" id="quantityInput1" class="quantity-input" value="1" readonly>
-                                        <div id="increaseBtn1" class="quantity-button">+</div>
+                                    <div class="option">
+                                        <strong>Số lượng</strong>
+                                        <div class="quantity-container">
+                                            <div id="decreaseBtn1" class="quantity-button">-</div>
+                                            <input type="text" id="quantityInput1" class="quantity-input" value="1" readonly>
+                                            <div id="increaseBtn1" class="quantity-button">+</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
                         <div class="product-detail2">
-                            <p class="product-price">7.990.000 VND</p>
-                            <p class="product-status">còn hàng</p>
-                            <button class="favorite-button"></button>
-                            <button class="delete-button"></button>
+                            <div class="detail-content">
+                                <p class="product-price">7.990.000 VND</p>
+                                <p class="product-status">còn hàng</p>
+                            </div>
+                            <div class="option">
+                                <button class="favorite-button"><img src="/assets/images/icon/Heart.svg" alt=""></button>
+                                <button class="delete-button"><img src="/assets/images/icon/Trash_bin.svg" alt=""></button>
+                            </div>
                         </div>
                     </div>
                 </div>
