--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -224,7 +224,7 @@
                 <div class="product">
                     <div class="product-information">
                         <div class="product-detail">
-                            <img class="me-2" src="https://vietthuong.vn/image/catalog/pearl/trong-pearl-export-lacquer-725-standard-c248.jpg" alt="pearl">
+                            <img class="me-2" src="/assets/images/instruments/pearl-export-lacquer.jpg" alt="pearl">
                             <div class="detail-content">
                                 <p class="product-name">PEARL Export Lacquer EXL725SP Standard</p>
                                 <p class="product-price"><strong>Giá:</strong> 11.990.000 VND</p>
@@ -269,7 +269,7 @@
                 <div class="product">
                     <div class="product-information">
                         <div class="product-detail">
-                            <img class="me-2" src="https://vietthuong.vn/image/cache/catalog/alesis-turbo-mesh-kit-400x400.jpg" alt="digital drum">
+                            <img class="me-2" src="/assets/images/instruments/alesis-turbo.jpg" alt="digital drum">
                             <div class="detail-content">
                                 <p class="product-name" id="product-name">Alesis Turbo Mesh Kit Alesis</p>
                                 <p class="product-price"><strong>Giá:</strong> 7.990.000 VND</p>
