Update URLs and fix link addresses

--- a/pages/account/my-account.html
+++ b/pages/account/my-account.html
@@ -557,7 +557,7 @@
                                 hàng</a>
                             <a href="addresses.html" class="list-group-item"><i class="bi bi-geo-alt me-2"></i> Danh
                                 sách địa chỉ</a>
-                            <a href="" class="list-group-item"><i class="bi bi-box-arrow-right me-2"></i> Đăng xuất</a>
+                            <a href="../home.html" class="list-group-item"><i class="bi bi-box-arrow-right me-2"></i> Đăng xuất</a>
                         </ul>
                     </div>
                 </div>
