--- a/pages/account/orders.html
+++ b/pages/account/orders.html
@@ -559,7 +559,7 @@
                                 hàng</a>
                             <a href="addresses.html" class="list-group-item"><i class="bi bi-geo-alt me-2"></i> Danh
                                 sách địa chỉ</a>
-                            <a href="logout.html" class="list-group-item"><i class="bi bi-box-arrow-right me-2"></i>
+                            <a href="../home.html" class="list-group-item"><i class="bi bi-box-arrow-right me-2"></i>
                                 Đăng xuất</a>
                         </ul>
                     </div>
