update  a little text

--- a/pages/about.html
+++ b/pages/about.html
@@ -430,7 +430,7 @@
 
 <section id="why-choose-us" class="py-5 bg-gradient-primary text-white">
     <div class="container">
-        <h2 class="section-title text-center text-white mb-5">8 lý do chọn Drum Store</h2>
+        <h2 class="section-title text-center text-white mb-5">Những lý do chọn Drum Store</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
             <div class="col">
                 <div class="card h-100 bg-transparent border-0">
