--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -148,7 +148,7 @@
             width: 125px;
             height: 40px;
             margin-top: 10px;
-            background-image: url("../images/icon/Trash_bin.svg");
+            background-image: url("/assets/images/icon/Trash_bin.svg");
             background-size: auto;
             background-repeat: no-repeat;
             background-position: center;
