--- a/pages/account/login.html
+++ b/pages/account/login.html
@@ -614,7 +614,7 @@
                 </button>
                 <button class="btn-social">
                     <img src="/assets/images/logo/Facebook.png" alt="Facebook" style="width: 20px; height: 20px;">
-                    &nbsp;Facebook
+                    &nbsp;Facebookz`
                 </button>
             </div>
             <div class="divider">hoặc</div>
