--- a/pages/account/orders.html
+++ b/pages/account/orders.html
@@ -566,34 +566,59 @@
                 </div>
                 <div class="col-md-9">
                     <h3 class="mb-4">Danh sách đơn hàng</h3>
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-hover">
-                            <thead class="table-primary">
-                                <tr>
-                                    <th>Mã đơn hàng</th>
-                                    <th>Ngày đặt</th>
-                                    <th>Trạng thái</th>
-                                    <th>Tổng tiền</th>
+                    <div class="table-responsive ">
+                        <table class="table table-bordered table-hover ">
+                            <thead class="table-primary ">
+                                <tr class="text-center">
+                                    <th class="text-nowrap">Mã đơn hàng</th>
+                                    <th>Tên sản phẩm</th>
+                                    <th class="text-nowrap">Tổng tiền</th>
+                                    <th>Mô tả sản phẩm</th>
+                                    <th>Ảnh sản phẩm</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>#ORD001</td>
-                                    <td>19/11/2024</td>
-                                    <td><span class="badge bg-success">Hoàn thành</span></td>
-                                    <td>1.200.000đ</td>
+                                    <td>1</td>
+                                    <td>Trống Tama Drum 5 Pcs</td>
+                                    <td>32.000.000</td>
+                                    <td>Trống Tama Drum 5 Pcs là bộ trống chất lượng cao, gồm 5 thành phần, mang lại âm
+                                        thanh mạnh mẽ và phong phú.</td>
+                                    <td><img src="../../assets/images/products/product_detail.jpg" alt=""
+                                            style="width: 130px; height: 100px;align-items: center;">
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>#ORD002</td>
-                                    <td>18/11/2024</td>
-                                    <td><span class="badge bg-warning">Đang xử lý</span></td>
-                                    <td>850.000đ</td>
+                                    <td>2</td>
+                                    <td>Trống điện tử Roland VAD507 </td>
+                                    <td>30.300.000</td>
+                                    <td>Trống điện tử Roland VAD507 mang thiết kế cổ điển với vẻ ngoài như trống
+                                        acoustic, kết hợp công nghệ âm thanh hiện đại. </td>
+                                    <td><img src="../../assets/images/products/color1.jpg" alt=""
+                                            style="width: 130px; height: 100px;align-items: center;">
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>#ORD002</td>
-                                    <td>10/11/2024</td>
-                                    <td><span class="badge bg-danger">Đã hủy</span></td>
-                                    <td>550.000đ</td>
+                                    <td rowspan="2">3</td> <!-- Mã đơn hàng chung cho cả 2 sản phẩm -->
+
+                                    <!-- Sản phẩm 1 -->
+                                    <td>Trống Tama Drum 5 Pcs</td>
+                                    <td  rowspan="2">52.000.000</td>
+                                    <td>Trống Tama Drum 5 Pcs là bộ trống chất lượng cao, gồm 5 thành phần, mang lại âm
+                                        thanh mạnh mẽ và phong phú.</td>
+                                    <td><img src="../../assets/images/products/color2.jpg" alt=""
+                                            style="width: 130px; height: 100px;"></td>
+                                </tr>
+                                <tr>
+                                    <!-- Sản phẩm 2 -->
+                                    <td>Bộ trống Yamaha GIGMAKER GM2F52 blue ice glitter</td>
+                                    <td>Bộ trống Yamaha GIGMAKER GM2F52 Blue Ice Glitter là một bộ trống chất lượng cao
+                                        với thiết kế sang trọng và âm thanh mạnh mẽ. Màu sắc Blue Ice Glitter nổi bật,
+                                        kết hợp với các thành phần bền bỉ như bass drum, snare, toms, hi-hat và cymbals,
+                                        mang lại trải nghiệm âm nhạc tuyệt vời cho cả người mới bắt đầu và các nghệ sĩ
+                                        chuyên nghiệp.</td>
+                                    <td><img src="../../assets/images/products/product_detail_4.jpg" alt=""
+                                            style="width: 130px; height: 100px;"></td>
                                 </tr>
                             </tbody>
                         </table>
