--- a/pages/account/register.html
+++ b/pages/account/register.html
@@ -635,15 +635,10 @@
                     </div>
                     <div class="field">
                         <!--không bắt buộc email để đăng kí tài khoản-->
-                        <input type="text" id="user-email" placeholder="Nhập email">
+                        <input type="text" id="user-email" placeholder="Nhập email" required
+                               onblur="validateInput('user-email')">
                         <label for="user-email" id="user-email-label">Email</label>
                         <p id="user-email-error" class="error-message"></p>
-                    </div>
-                    <div class="field">
-                        <input type="text" id="user-birthday" placeholder="Ngày sinh" required
-                               onblur="validateInput('user-birthday')">
-                        <label for="user-birthday" id="user-birthday-label">Ngày sinh</label>
-                        <p id="user-birthday-error" class="error-message"></p>
                     </div>
                     <div class="field">
                         <input type="password" id="user-password" placeholder="Nhập mật khẩu" required
