--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -631,8 +631,8 @@
                                 <i class="bi bi-person-circle"></i>
                             </button>
                             <ul class="dropdown-menu mobile-dropdown-menu">
-                                <li><a class="dropdown-item" href="/pages/account/login.html">Đăng nhập</a></li>
-                                <li><a class="dropdown-item" href="/pages/account/register.html">Đăng ký</a></li>
+                                <li><a class="dropdown-item" href="../../assets/pages/account/login.html">Đăng nhập</a></li>
+                                <li><a class="dropdown-item" href="../../assets/pages/account/register.html">Đăng ký</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
