add admin dasboard pages

--- a/admin/dashboard/users.html
+++ b/admin/dashboard/users.html
@@ -224,6 +224,18 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
+                    <a href="vouchers.html" class="sidebar-link">
+                        <i class="bi bi-tags"></i>
+                        <span>Quản lý phiếu giảm giá</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="vouchers.html" class="sidebar-link">
+                        <i class="bi bi-collection"></i>
+                        <span>Quản lý danh mục</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
                     <a href="config.html" class="sidebar-link">
                         <i class="bi bi-person"></i>
                         <span>Thông tin cá nhân</span>
