--- a/admin/dashboard/vouchers.html
+++ b/admin/dashboard/vouchers.html
@@ -1,17 +1,15 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Quản lý sản phẩm</title>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Quản lí phiếu giảm giá</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
@@ -155,7 +153,7 @@
             display: none;
         }
 
-        #sidebar:not(.expand) .sidebar-item:hover .has-dropdown+.sidebar-dropdown {
+        #sidebar:not(.expand) .sidebar-item:hover .has-dropdown + .sidebar-dropdown {
             display: block;
             max-height: 15em;
             width: 100%;
@@ -188,11 +186,30 @@
         .navbar-expand .navbar-collapse {
             min-width: 200px;
         }
+
+        .avatar {
+            height: 40px;
+            width: 40px;
+        }
+
+
+        @media (min-width: 768px) {
+        }
+
+        .chart-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        #high-performing-product {
+            width: 100% !important;
+            height: 100% !important;
+        }
     </style>
     <link rel="stylesheet" href="dashboard.css">
 
 </head>
-
 <body>
 <div class="wrapper ">
     <aside id="sidebar">
@@ -709,7 +726,5 @@
     });
 
 </script>
-
 </body>
-
 </html>
